// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpenseList with empty message when no expenses array 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-mobile"
    >
      Expenses
    </div>
    <div
      className="show-desktop"
    >
      Expense
    </div>
    <div
      className="show-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <div
      className="list-item--message"
    >
      <span>
        No expenses
      </span>
    </div>
  </div>
</div>
`;

exports[`should render ExpenseList with expenses 1`] = `
<div
  className="content-container"
>
  <div
    className="list-header"
  >
    <div
      className="show-mobile"
    >
      Expenses
    </div>
    <div
      className="show-desktop"
    >
      Expense
    </div>
    <div
      className="show-desktop"
    >
      Amount
    </div>
  </div>
  <div
    className="list-body"
  >
    <ExpenseListItem
      amount={100}
      createdAt={0}
      description="Car"
      id="1"
      key="1"
      note="test note 1"
    />
    <ExpenseListItem
      amount={200}
      createdAt={-345600000}
      description="Rent"
      id="2"
      key="2"
      note="test note 2"
    />
    <ExpenseListItem
      amount={300}
      createdAt={345600000}
      description="Credit Card"
      id="3"
      key="3"
      note="test note 3"
    />
  </div>
</div>
`;
